ckad/13.auth/13.admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1 
kind: ValidatingWebhookConfiguration 
metadata:
  name:  "pod-example.com" 
webhooks:
 - name: "pod-example.com"
   url: "admission-controller-server.com"
   clientConfig: 
    service: 
      namespace: "webhook-example"
      name: "svc-name" 
    caBundle: "blabbaaallllasasdfadsf"
  #this is where the webhook server runs, if this passes then allow the rules that are present here
   rules:
    - apiGroups: [""]
      apiVersion: ["v1"]
      operations: ["CREATE"]
      resources: ["pods"]
      scope: "Namespaced"
